[tool.poetry]
name = "day-off-checker"
version = "0.1.0"
description = ""
authors = ["Jacob Mischka <jacob@mischka.me>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.10.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
